# logger_v-python

./: LICENSE  README.md  pyproject.toml
src/LoggerV/: __init__.py  helpers.py  logger.py  loggerExceptions.py  test.py
tests/: main.py
