[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loggerV"
version = "1.0.2"
authors = [
  { name="Aharon Vegoda", email="aaronvegoda@gmail.com" },
]
maintainers = [
  { name="Aharon Vegoda", email="aaronvegoda@gmail.com" },
]
description = "A logger class, and a decorator that works with that class for python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/aaronv15/logger_v-python"
"Bug Tracker" = "https://github.com/aaronv15/logger_v-python/issues"